# Prism

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Fullstack Engineer Assignment.docx  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: README.md  api-contracts.md  architecture.md  implementation-plan.md  risks-and-tradeoffs.md  runbook.md  schema.md
docs/adr/: 0001-python-fastapi-litellm.md  0002-single-postgres-with-clean-migration-path.md  0003-redis-streams-as-event-bus.md  0004-sdk-as-thin-wrapper-not-litellm-callback.md  0005-storage-and-bus-interfaces.md  0006-pii-redaction-at-ingest-boundary.md  0007-streaming-final-event-logging.md  0008-three-table-groups-no-cross-group-fks.md  0009-fire-and-forget-sdk-with-bounded-queue.md  0010-rollups-by-consumer-not-query-time.md  0011-sdk-as-litellm-callback-supersedes-0004.md  0012-strands-tool-hooks.md  0013-constrained-dashboard-widgets.md  0014-db-backed-provider-credentials.md  README.md
infra/: pyproject.toml
infra/prism_infra/: __init__.py  crypto.py  events.py  models.py
infra/prism_infra/bus/: __init__.py  base.py  memory.py  redis_streams.py
infra/prism_infra/storage/: __init__.py  base.py  credentials.py  dashboards.py  memory.py  migrations.py  postgres.py
infra/sql/: init.sql  migrations.sql
k8s/: DEPLOYMENT.md  README.md  configmap.yaml  secret.yaml.template
k8s/chatbot-api/: deployment.yaml  service.yaml
k8s/chatbot-ui/: deployment.yaml  service.yaml
k8s/ingestion-api/: deployment.yaml  service.yaml
k8s/postgres/: pvc.yaml  service.yaml  statefulset.yaml
k8s/redis/: pvc.yaml  service.yaml  statefulset.yaml
k8s/scripts/: apply-all.sh  build-and-push.sh
k8s/workers/: log-writer-deployment.yaml  metrics-reconciler-deployment.yaml  metrics-roller-deployment.yaml  partition-cron-deployment.yaml
scripts/: bootstrap_env.py  check_bedrock_access.py
sdk/: pyproject.toml
sdk/src/olive_sdk/: __init__.py
sdk/src/prism_sdk/: __init__.py  strands.py
services/chatbot-api/: Dockerfile  pyproject.toml
services/chatbot-api/app/: main.py
services/chatbot-api/chatbot_api/: credentials.py  dashboards.py  llm.py  main.py
services/ingestion-api/: Dockerfile  pyproject.toml
services/ingestion-api/app/: main.py
services/ingestion-api/ingestion_api/: main.py  redaction.py
services/workers/: Dockerfile  pyproject.toml
services/workers/log_writer/: main.py
services/workers/metrics_reconciler/: main.py
services/workers/metrics_roller/: main.py
services/workers/partition_cron/: main.py
tests/: test_chatbot_phase4.py  test_codex_fixes.py  test_credentials_crypto.py  test_healthz.py  test_infra_interfaces.py  test_ingestion_phase2.py  test_phase6.py  test_phase8_dashboards.py  test_sdk.py
web/: .env.local  Dockerfile  next.config.js  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboards/: page.tsx  types.ts
web/app/dashboards/[id]/: page.tsx
web/app/metrics/: page.tsx
web/app/settings/: page.tsx
web/lib/: api.ts  nav.tsx  tailwind-select.tsx  theme-toggle.tsx
