[project]
name = "prism"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "prism-infra",
]

[dependency-groups]
dev = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "litellm>=1.40",
    "pytest>=8.2",
    "ruff>=0.15.0",
    "ty>=0.0.1a23",
    "uvicorn[standard]>=0.29",
]

[tool.uv]
package = false

[tool.uv.sources]
prism-infra = { workspace = true }

[tool.uv.workspace]
members = [
    "infra",
    "sdk",
    "services/chatbot-api",
    "services/ingestion-api",
    "services/workers",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = [
    "infra",
    "sdk/src",
    "services/chatbot-api",
    "services/ingestion-api",
    "services/workers",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Query",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["infra"]
