[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatbot-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "fastapi>=0.111",
    "prism-infra",
    "prism-sdk",
    "psycopg[binary]>=3.2",
    "strands-agents[litellm]>=1.0.0",
    "uvicorn[standard]>=0.29",
]

[tool.uv.sources]
prism-infra = { workspace = true }
prism-sdk = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["chatbot_api"]
