[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingestion-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "prism-infra",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
presidio = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion_api"]
