[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-workers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "prism-infra",
    "watchfiles>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = [
    "log_writer",
    "metrics_roller",
    "metrics_reconciler",
    "partition_cron",
]
